--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- bio paragraph-->
-                <h1>Short Bio</h1>
+                <h1 class="text-center ont-weight-light mb-0">Short Bio</h1>
                 <p>Former senior consultant for data-informed solutions with a deep interest in blending data and business for practical solutions. </p>
         
                 <p>At Deloitte, I developed tools to improve IFRS 17 reporting validation, streamlining processes. I managed multiple programs simultaneously and facilitated cross-functional presentations for global clients. </p>
