--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- bio paragraph-->
-                <h1 class="text-center ont-weight-light mb-0">Short Bio</h1>
-                <p>Former senior consultant for data-informed solutions with a deep interest in blending data and business for practical solutions. </p>
+                <h1 class="text-center font-weight-light mb-0">Short Bio</h1>
+                <p class="text-center font-weight-light mb-0">Former senior consultant for data-informed solutions with a deep interest in blending data and business for practical solutions. </p>
         
-                <p>At Deloitte, I developed tools to improve IFRS 17 reporting validation, streamlining processes. I managed multiple programs simultaneously and facilitated cross-functional presentations for global clients. </p>
+                <p class="text-center font-weight-light mb-0">At Deloitte, I developed tools to improve IFRS 17 reporting validation, streamlining processes. I managed multiple programs simultaneously and facilitated cross-functional presentations for global clients. </p>
         
-                <p>My vision is to leverage data for societal and business impact. I aspire to play a key role in this evolving data-driven landscape. </p>   
+                <p class="text-center font-weight-light mb-0">My vision is to leverage data for societal and business impact. I aspire to play a key role in this evolving data-driven landscape. </p>   
             </div>
         </section>
     </body>
