--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
                 <!--This code defines the "My Webpage" link in the top left corner of the navigation pane-->
-                <a class="navbar-brand" href="./index.html">My Webpage</a>
+                <a class="navbar-brand" href="./index.html">Janelle Lin</a>
                 <!--This code defines the "List" link in the top right corner of the navigation pane-->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">List</a></li>
@@ -37,12 +37,14 @@
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- bio paragraph-->
-                <h4 class="text-center font-weight-light mb-0">Short Bio</h1>
-                <p class="text-center font-weight-light mb-0">Former Deloitte senior consultant for data-informed solutions with a deep interest in blending data and business for practical solutions. </p>
+                <h4 class="text-center font-weight-light mb-0">Bio</h1>
+                <center>
+                <p class="text-center font-weight-light mb-0">Former Deloitte senior consultant for data-informed solutions with a deep interest in blending data and business. </p>
         
-                <p class="text-center font-weight-light mb-0">Developed tools to improve financial reporting validation, streamlining processes. Managed multiple programs simultaneously and facilitated cross-functional collaborations for global clients. </p>
+                <p class="text-center font-weight-light mb-0">Developed processes and streamlined workflows. Managed multiple programs and facilitated cross-functional collaborations for global clients. </p>
         
                 <p class="text-center font-weight-light mb-0">Aspire to play a key role in the evolving data-driven landscape. </p>   
+                </center>
             </div>
         </section>
     </body>
