--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <!-- bio paragraph-->
                 <h4 class="text-center font-weight-light mb-0">Bio</h1>
                 <center>
-                <p class="text-center font-weight-light mb-0">Former Deloitte senior consultant for data-informed solutions with a deep interest in blending data and business. </p>
+                Former Deloitte senior consultant for data-informed solutions with a deep interest in blending data and business.
         
-                <p class="text-center font-weight-light mb-0">Developed processes and streamlined workflows. Managed multiple programs and facilitated cross-functional collaborations for global clients. </p>
+                Developed processes and streamlined workflows. Managed multiple programs and facilitated cross-functional collaborations for global clients.
         
-                <p class="text-center font-weight-light mb-0">Aspire to play a key role in the evolving data-driven landscape. </p>   
+                Aspire to play a key role in the evolving data-driven landscape. 
                 </center>
             </div>
         </section>
