--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                 <p class="masthead-subheading font-weight-light mb-0">School of Information Student</p>
             </div>
         </header>
-        <section class="text-center">
+        <section class="masthead bg-primary text-white text-center">
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- bio paragraph-->
-                <h4 class="text-center font-weight-light mb-0">Bio</h1>
+                <h4 class="text-center font-weight-light mb-0">Bio</h4>
                 
                 <p>Former Deloitte senior consultant for data-informed solutions with a deep interest in blending data and business.</p>
         
