--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p class="masthead-subheading font-weight-light mb-0">School of Information Student</p>
             </div>
         </header>
-        <section class="masthead bg-primary text-white text-center">
+        <section class="text-center align-items-center">
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- bio paragraph-->
