--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="col-md-6 col-lg-4 mb-5">
                 <!-- bio paragraph-->
-                <h4 class="text-center font-weight-light mb-0">Bio</h4>
+                <h4 class="text-center font-weight-light mb-0 align-items-center">Bio</h4>
                 
                 <p>Former Deloitte senior consultant for data-informed solutions with a deep interest in blending data and business.</p>
         
