--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </header>
         <section class="text-center align-items-center">
 
-            <div class="col-md-6 col-lg-4 mb-5">
+            <div class="col-md-6 col-lg-4 mb-5 align-items-center">
                 <!-- bio paragraph-->
                 <h4 class="text-center font-weight-light mb-0 align-items-center">Bio</h4>
                 
