--- a/list.html
+++ b/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>  
 <html>  
     <header>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style3.css">
         <link rel="stylesheet" href="table_style.css">
         <title>My Webpage Title</title>
     </header>
@@ -10,10 +10,12 @@
         <!--This section of code defines the navigation bar at the top of the page.  The classes used here are defined in the style.css file.-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <!--This code defines the "My Webpage" link in the top right corner of the navigation pane-->
-                <a class="navbar-brand" href="">My Webpage</a>
+                <!--This code defines the "Janelle Lin" link in the top right corner of the navigation pane-->
+                <a class="navbar-brand" href="">Janelle Lin</a>
+                
                 <!--This code defines the "List" link in the top left corner of the navigation pane-->
                 <ul class="navbar-nav ms-auto">
+                    
                     <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">List</a></li>
                 </ul>
             </div>
