--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
     <header>
         <link rel="stylesheet" href="style3.css">
         <link rel="stylesheet" href="table_style.css">
-        <title>My Webpage Title</title>
+        <title>Experience</title>
     </header>
     <body>  
         <!---Navigation--->
