--- a/list.html
+++ b/list.html
@@ -3,7 +3,7 @@
     <header>
         <link rel="stylesheet" href="style3.css">
         <link rel="stylesheet" href="table_style.css">
-        <title>Experience</title>
+        <title>Janelle Lin: Experience</title>
     </header>
     <body>  
         <!---Navigation--->
@@ -16,7 +16,7 @@
                 <!--This code defines the "List" link in the top left corner of the navigation pane-->
                 <ul class="navbar-nav ms-auto">
                     
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./list.html">List</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="./index.html">List</a></li>
                 </ul>
             </div>
         </nav>
